cabal-version:      >=1.10
name:               egison-pattern-src
version:            0.1.0.0
synopsis:
  Manipulating Egison patterns: abstract syntax, parser, and pretty-printer

description:
  @egison-pattern-src@ provides a standalone syntax definition for patterns in [Egison programming language](https://egison.org/).

bug-reports:        https://github.com/egison/egison-pattern-src/issues
homepage:           https://github.com/egison/egison-pattern-src#readme
license:            BSD3
license-file:       LICENSE
author:             coord_e
maintainer:         coord_e <me@coord-e.com>, Satoshi Egi <egi@egison.org>
copyright:          Copyright 2020 coord_e
category:           Language
extra-source-files: CHANGELOG.md
build-type:         Custom

source-repository head
  type:     git
  location: https://github.com/egison/egison-pattern-src

custom-setup
  setup-depends:
      base           >=4.12 && <4.13
    , Cabal
    , cabal-doctest  >=1    && <1.1

library
  build-depends:
      base                >=4.12 && <4.13
    , containers
    , free
    , megaparsec
    , mtl
    , parser-combinators
    , recursion-schemes
    , transformers

  hs-source-dirs:     src

  -- cabal-fmt: expand src
  exposed-modules:
    Language.Egison.Syntax.Pattern
    Language.Egison.Syntax.Pattern.Base
    Language.Egison.Syntax.Pattern.Expr
    Language.Egison.Syntax.Pattern.Parser
    Language.Egison.Syntax.Pattern.Parser.Associativity
    Language.Egison.Syntax.Pattern.Parser.Combinator
    Language.Egison.Syntax.Pattern.Parser.Expr
    Language.Egison.Syntax.Pattern.Parser.Precedence
    Language.Egison.Syntax.Pattern.Parser.Prim
    Language.Egison.Syntax.Pattern.Parser.Token

  if impl(ghc >=7.8)
    ghc-options: -j4

  if impl(ghc >=8)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.4)
    ghc-options: -Wpartial-fields

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -O2

  default-language:   Haskell2010
  default-extensions:
    ConstraintKinds
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    TypeFamilies

test-suite doctest
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Doctest.hs
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010
  x-doctest-options: --fast
  build-depends:
      base
    , doctest
    , egison-pattern-src
    , QuickCheck
    , template-haskell

test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            driver.hs
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
  build-depends:
      base
    , egison-pattern-src
    , QuickCheck
    , tasty

  build-tool-depends: tasty-discover:tasty-discover -any
